# Pesquisa_material

./: .env.example  .env.staging  .gitignore  README.md  conftest.py  demo_exclusivity_flow.py  job_runner.py  manage.py  ocr_test_output.txt  pyproject.toml  pytest.ini  requirements.txt  results.txt  test_output.txt
config/: __init__.py  asgi.py  settings.py  urls.py
intake_canonicalization/: category_rules_eligibility_validator.py  confidence_gating_router.py  directive_audit_persistence.py  directive_deterministic_parser.py  directive_reconciliation_resolver.py  directive_runtime_config.py  duplicate_resolution_coordinator.py  file_type_detection_router.py  isbn_normalization_validation.py  llm_fallback_gateway.py  missing_isbn_search_gate.py  ocr_extraction_processor.py  ocr_extraction_quality_validator.py  pdf_coverage_layout_router.py  pdf_ingestion_field_extraction.py  quantity_unit_normalizer.py  stage_a_ingestion_pipeline.py
persistence/: apps.py  models.py  repositories.py
plan/: issue_loop_playbook.md  issue_loop_state.md  plan-schoolMaterialPriceFinder.md
platform/: database.py  job_runner.py  observability.py  storage.py
scripts/: _amazon_isbn_probe3.py  _magalu_diag.py  _magalu_headless_diag.py  debug_kalunga_access.py  enable_search_debug.ps1  magalu_manual_login_probe.py  seed_staging_db.py
search_ranking/: apostila_routing_guard.py  match_classifier.py  query_orchestrator.py  ranking_engine.py  school_exclusivity_resolver.py  search_executor.py  text_normalization.py
source_adapters/: __init__.py  amazon_adapter.py  base.py  magalu_adapter.py  (+5 more)
(+140 files in other folders)
